[fix] word-wrap on genres

--- a/src/components/Movie.css
+++ b/src/components/Movie.css
@@ -49,3 +49,6 @@
     height:100px;
     display:auto;
 }
+.genres {
+    word-wrap:break-word;
+}
